# webserver

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.win  docker-compose.yml  readme.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml
nginx/: docker-compose.yml  nginx.conf  readme.md
src/: cdfmt.c  cdfmt.h  cli-main.c  client.c  client.h  data.http.c  data.http.h  detect.c  fenrir.h  httpd.c  httpd.h  log.h  main.c  menu.http.c  menu.http.h  pack.h  patch.c  patch.h  scandir.cpp  scandir.h  server.c  server.h  wx-main.cpp
src/mdns/: mdns.c  mdns.h
src/util/: cdrom.h  chdcd.cpp  chdcd.h  util.cpp  util.h
src/windows/: fenrir-wx.rc
src/wx-widgets/: app.cpp  app.h  server-intf.cpp  server-intf.h
tests/: url_encode.c
tests/menu/: CMakeLists.txt  CodeCoverage.cmake  menu.c
tests/tocs/: CMakeLists.txt  nekketsu.c  nekketsu.toc.h
